add Mr Dambo video

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
           </div>
         </div>
         <div class="aspect-video rounded-3xl glass ring-sv grid place-items-center">
-          <!-- Replace with your real video -->
-          <p class="p-6 text-center" aria-label="Teacher intro video placeholder">🎥 Drop my teacher intro video here<br><span class="text-sm text-neutral-600">Replace with &lt;video controls src="..." poster="..." /&gt;</span></p>
-        </div>
-      </div>
+  <video controls class="w-full h-full rounded-3xl">
+    <source src="assets/Mr_Dambo.mp4" type="video/mp4">
+    Oops… looks like your browser skipped class today. 🎬
+  </video>
+</div>
     </section>
 
     <!-- Gigs Grid -->
