change the name Alex's Mayhem 🎭 to Alex Does It

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header class="relative overflow-hidden">
     <div class="absolute inset-0 -z-10 bg-gradient-to-br from-sky-100 via-white to-amber-100"></div>
     <nav class="max-w-6xl mx-auto px-4 py-5 flex items-center justify-between">
-      <a href="index.html" class="text-xl font-extrabold tracking-tight">Alex's Mayhem 🎭</a>
+      <a href="index.html" class="text-xl font-extrabold tracking-tight">Alex Does It!</a>
 <div class="hidden sm:flex items-center gap-6 text-sm font-semibold">
         <a href="#gigs" class="hover:opacity-70">Gigs</a>
         <a href="#result" class="hover:opacity-70">Result</a>
