correct Mr Dambo video's name

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           </div>
         </div>
         <div class="aspect-video rounded-3xl glass ring-sv grid place-items-center">
-  <video controls class="w-full h-full rounded-3xl">
-    <source src="assets/Mr_Dambo.mp4" type="video/mp4">
+  <video controls preload="metadata" playsinline class="w-full h-full rounded-3xl">
+    <source src="/assets/Mr_Dambo.mp4" type="video/mp4">
     Oops… looks like your browser skipped class today. 🎬
   </video>
 </div>
