--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     controls
     preload="metadata"
     playsinline
-    class="w-full h-full rounded-3xl object-contain"
+    class="w-full h-full rounded-3xl object-cover"
     poster="assets/poster.jpg">
     <source src="assets/Mr_Dambo.mp4" type="video/mp4">
     Oops… looks like your browser skipped class today. 🎬
