Fix object-cover for videos

--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
             <a href="#gigs" class="rounded-xl bg-white text-neutral-900 px-5 py-3 font-semibold shadow hover:opacity-90">See my gigs</a>
           </div>
         </div>
-      <div class="rounded-3xl glass ring-sv grid place-items-center bg-black [aspect-ratio:9/16] max-w-sm ml-auto mr-0">
+     <div class="rounded-3xl glass ring-sv overflow-hidden bg-black [aspect-ratio:9/16] max-w-md ml-auto mr-0 md:max-w-lg">
   <video
     controls
     preload="metadata"
     playsinline
-    class="w-full h-full rounded-3xl object-cover"
+    class="w-full h-full object-cover"
     poster="assets/poster.jpg">
     <source src="assets/Mr_Dambo.mp4" type="video/mp4">
     Oops… looks like your browser skipped class today. 🎬
   </video>
 </div>
+
 
     </section>
 
