change gigs for instagram

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="pt-4 md:pt-10">
       <div class="grid md:grid-cols-2 gap-10 md:gap-16 items-center">
         <div class="glass ring-sv rounded-3xl p-8">
-          <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">Hi, I’m Alex — an English teacher in America.</h1>
+          <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">Hi, I'm Alex.</h1>
           <p class="mt-4 text-lg text-neutral-700">I fix grammar, meditate for patience, and magically clear the room whenever I mention the word <em>“presentation.”</em></p>
           <div class="mt-6 flex flex-wrap gap-3">
             <a href="https://wa.me/15551234567?text=Hi%20Alex!%20I’ve%20got%20a%20gig%20for%20you" target="_blank" class="rounded-xl bg-emerald-500 text-white px-5 py-3 font-semibold shadow hover:opacity-90">Message me on WhatsApp</a>
@@ -66,76 +66,26 @@
 
     </section>
 
-    <!-- Gigs Grid -->
-    <section id="gigs" class="mt-14">
-      <div class="flex items-end justify-between flex-wrap gap-4">
-        <h2 class="text-2xl md:text-3xl font-extrabold">My alter egos</h2>
-        <p class="text-neutral-600">Chic look. Silicon‑Valley layout. Zero boredom.</p>
-      </div>
+    <!-- Instagram Grid -->
+   <section id="gigs" class="mt-14">
+  <div class="flex items-end justify-between flex-wrap gap-4">
+    <h2 class="text-2xl md:text-3xl font-extrabold">My alter egos</h2>
+    <p class="text-neutral-600">Straight from Instagram — @alexdoes.fit</p>
+  </div>
 
-      <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <!-- Opera Singer -->
-        <article class="rounded-2xl glass ring-sv hover:shadow-lg transition">
-          <a href="opera-singer.html" class="block">
-            <div class="aspect-video bg-neutral-100 rounded-t-2xl grid place-items-center text-neutral-500 text-sm">🎥 Dramatic aria moment</div>
-            <div class="p-5">
-              <h3 class="font-bold text-lg">Opera Singer — I hit high notes and hope for the best</h3>
-              <p class="mt-1 text-neutral-600">Video, pricing & WhatsApp →</p>
-            </div>
-          </a>
-        </article>
-        <!-- Mona Lisa -->
-        <article class="rounded-2xl glass ring-sv hover:shadow-lg transition">
-          <a href="monalisa.html" class="block">
-            <div class="aspect-video bg-neutral-100 rounded-t-2xl grid place-items-center text-neutral-500 text-sm">🎥 20‑minute still pose</div>
-            <div class="p-5">
-              <h3 class="font-bold text-lg">Mona Lisa — mastering the mysterious smile</h3>
-              <p class="mt-1 text-neutral-600">Video, pricing & WhatsApp →</p>
-            </div>
-          </a>
-        </article>
-        <!-- Labubu -->
-        <article class="rounded-2xl glass ring-sv hover:shadow-lg transition">
-          <a href="labubu.html" class="block">
-            <div class="aspect-video bg-neutral-100 rounded-t-2xl grid place-items-center text-neutral-500 text-sm">🎥 Labubu time‑lapse</div>
-            <div class="p-5">
-              <h3 class="font-bold text-lg">Labubu — because someone had to</h3>
-              <p class="mt-1 text-neutral-600">Video, pricing & WhatsApp →</p>
-            </div>
-          </a>
-        </article>
-        <!-- Dancer -->
-        <article class="rounded-2xl glass ring-sv hover:shadow-lg transition">
-          <a href="dancer.html" class="block">
-            <div class="aspect-video bg-neutral-100 rounded-t-2xl grid place-items-center text-neutral-500 text-sm">🎥 Dance clip</div>
-            <div class="p-5">
-              <h3 class="font-bold text-lg">Dancer — I move like the Wi‑Fi signal: unstable but strong</h3>
-              <p class="mt-1 text-neutral-600">Video, pricing & WhatsApp →</p>
-            </div>
-          </a>
-        </article>
-        <!-- Influencer -->
-        <article class="rounded-2xl glass ring-sv hover:shadow-lg transition">
-          <a href="influencer.html" class="block">
-            <div class="aspect-video bg-neutral-100 rounded-t-2xl grid place-items-center text-neutral-500 text-sm">🎥 Influencer reel</div>
-            <div class="p-5">
-              <h3 class="font-bold text-lg">Influencer — I try (and sometimes I trend)</h3>
-              <p class="mt-1 text-neutral-600">Video, pricing & WhatsApp →</p>
-            </div>
-          </a>
-        </article>
-        <!-- English Teacher -->
-        <article class="rounded-2xl glass ring-sv hover:shadow-lg transition">
-          <a href="english-teacher.html" class="block">
-            <div class="aspect-video bg-neutral-100 rounded-t-2xl grid place-items-center text-neutral-500 text-sm">🎥 Classroom moments</div>
-            <div class="p-5">
-              <h3 class="font-bold text-lg">English Teacher — because grammar pays the bills</h3>
-              <p class="mt-1 text-neutral-600">Video, pricing & WhatsApp →</p>
-            </div>
-          </a>
-        </article>
-      </div>
-    </section>
+  <div class="mt-6 rounded-3xl glass ring-sv overflow-hidden">
+    <!-- LightWidget Instagram Feed -->
+    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+    <iframe 
+      src="//lightwidget.com/widgets/6f49a36d60d258979c4312bcc163715d.html" 
+      scrolling="no" 
+      allowtransparency="true" 
+      class="lightwidget-widget w-full"
+      style="border:0;overflow:hidden;aspect-ratio:4/3;">
+    </iframe>
+  </div>
+</section>
+
 
     <!-- Result / Money Rain -->
     <section id="result" class="mt-16 bg-neutral-900 text-white rounded-3xl p-8 md:p-12 ring-sv">
