Change the Instagram Grid text to "Proof I actually exist outside the classroom"

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <!-- Instagram Grid -->
    <section id="gigs" class="mt-14">
   <div class="flex items-end justify-between flex-wrap gap-4">
-    <h2 class="text-2xl md:text-3xl font-extrabold">My alter egos</h2>
-    <p class="text-neutral-600">Live on Instagram — @alexdoes.fit</p>
+    <h2 class="text-2xl md:text-3xl font-extrabold">Proof I actually exist outside the classroom</h2>
+    <p class="text-neutral-600">Follow me on Instagram — @alexdoes.fit</p>
   </div>
 
   <div class="mt-6 rounded-3xl glass ring-sv overflow-hidden">
