--- a/index.html
+++ b/index.html
@@ -92,18 +92,38 @@
 
     <!-- Result / Money Rain -->
     <section id="result" class="mt-16 bg-neutral-900 text-white rounded-3xl p-8 md:p-12 ring-sv">
-      <div class="grid md:grid-cols-2 gap-8 items-center">
-        <div>
-          <h3 class="text-2xl md:text-3xl font-extrabold">In the end, my hustle pays off 💸</h3>
-          <p class="mt-3 text-neutral-300">“When I teach, money falls from the sky (literally 💸)… okay, almost. But the video is perfect: a hardworking teacher, honest work, and a big motivation — because rent won’t pay itself.”</p>
-          <a href="https://wa.me/15551234567?text=I%20want%20you%20for%20my%20project" target="_blank" class="inline-block mt-5 px-5 py-3 rounded-xl bg-white text-neutral-900 font-semibold">Hire me now</a>
-        </div>
-        <div class="aspect-video rounded-2xl bg-neutral-800 border border-neutral-700 grid place-items-center">
-          <!-- Replace with your real video -->
-          <p class="p-6 text-center text-neutral-400">🎥 Paste: &lt;video controls src="/videos/money-rain.mp4" poster="/videos/money-rain.jpg" /&gt;</p>
-        </div>
+  <div class="grid md:grid-cols-2 gap-8 items-center">
+    <!-- Texto -->
+    <div class="order-2 md:order-1">
+      <h3 class="text-2xl md:text-3xl font-extrabold">My raise didn’t come, but my talent did. 💼🎭</h3>
+      <p class="mt-3 text-neutral-300">
+        From praising the boss to pronouncing “through” correctly — I give 110%.
+        And yes, I still need a vacation.
+      </p>
+      <a href="https://wa.me/15551234567?text=I%20want%20you%20for%20my%20project"
+         target="_blank"
+         class="inline-block mt-5 px-5 py-3 rounded-xl bg-white text-neutral-900 font-semibold">
+        Hire me now
+      </a>
+    </div>
+
+    <!-- Vídeo vertical 9:16 preenchendo tudo -->
+    <div class="order-1 md:order-2">
+      <div class="rounded-2xl overflow-hidden bg-black [aspect-ratio:9/16] w-full max-w-sm sm:max-w-md md:max-w-[28rem] mx-auto">
+        <video
+          controls
+          preload="metadata"
+          playsinline
+          class="w-full h-full object-cover"
+          poster="assets/poster.jpg">
+          <source src="assets/Mr_Dambo.mp4" type="video/mp4">
+          Oops… looks like your browser skipped class today. 🎬
+        </video>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
   </main>
 
   <!-- Footer / Contact -->
