Update its_raining.MP4 video

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           playsinline
           class="w-full h-full object-cover"
           poster="assets/poster.jpg">
-          <source src="assets/Mr_Dambo.mp4" type="video/mp4">
+          <source src="assets/its_raining.MP4" type="video/mp4">
           Oops… looks like your browser skipped class today. 🎬
         </video>
       </div>
