--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="bg-neutral-50 text-neutral-900">
   <!-- Floating urgent CTA -->
-  <a id="waFloat" href="https://wa.me/15551234567?text=Hey%20Alex%2C%20let%E2%80%99s%20work%20together!" target="_blank" rel="noopener" class="floating-cta">
+  <a id="waFloat" href="https://wa.me/14072023758?text=Hey%20Alex%2C%20let%E2%80%99s%20work%20together!" target="_blank" rel="noopener" class="floating-cta">
     <div class="flex items-center gap-3 rounded-2xl bg-emerald-500 px-5 py-3 shadow-xl hover:shadow-emerald-600/40 transition">
       <span class="text-white font-bold">I’m in a rush — hire me!</span>
     </div>
@@ -47,7 +47,7 @@
           <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">Hi, I'm Alex.</h1>
           <p class="mt-4 text-lg text-neutral-700">I fix grammar, meditate for patience, and magically clear the room whenever I mention the word <em>“presentation.”</em></p>
           <div class="mt-6 flex flex-wrap gap-3">
-            <a href="https://wa.me/15551234567?text=Hi%20Alex!%20I’ve%20got%20a%20gig%20for%20you" target="_blank" class="rounded-xl bg-emerald-500 text-white px-5 py-3 font-semibold shadow hover:opacity-90">Message me on WhatsApp</a>
+            <a href="https://wa.me/14072023758?text=Hi%20Alex!%20I’ve%20got%20a%20gig%20for%20you" target="_blank" class="rounded-xl bg-emerald-500 text-white px-5 py-3 font-semibold shadow hover:opacity-90">Message me on WhatsApp</a>
             <a href="#gigs" class="rounded-xl bg-white text-neutral-900 px-5 py-3 font-semibold shadow hover:opacity-90">See my gigs</a>
           </div>
         </div>
@@ -69,8 +69,8 @@
     <!-- Instagram Grid -->
    <section id="gigs" class="mt-14">
   <div class="flex items-end justify-between flex-wrap gap-4">
-    <h2 class="text-2xl md:text-3xl font-extrabold">Proof I actually exist outside the classroom</h2>
-    <p class="text-neutral-600">Follow me on Instagram — @alexdoes.fit</p>
+    <h2 class="text-2xl md:text-3xl font-extrabold">Follow me on Instagram — @alexdoes.fit</h2>
+    <p class="text-neutral-600">Proof I actually exist outside the classroom</p>
   </div>
 
   <div class="mt-6 rounded-3xl glass ring-sv overflow-hidden">
@@ -95,12 +95,9 @@
   <div class="grid md:grid-cols-2 gap-8 items-center">
     <!-- Texto -->
     <div class="order-2 md:order-1">
-      <h3 class="text-2xl md:text-3xl font-extrabold">My raise didn’t come, but my talent did. 💼🎭</h3>
-      <p class="mt-3 text-neutral-300">
-        From praising the boss to pronouncing “through” correctly — I give 110%.
-        And yes, I still need a vacation.
-      </p>
-      <a href="https://wa.me/15551234567?text=I%20want%20you%20for%20my%20project"
+      <h3 class="text-2xl md:text-3xl font-extrabold">As a result of my first video...💼🎭</h3>
+  
+      <a href="https://wa.me/14072023758text=I%20want%20you%20for%20my%20project"
          target="_blank"
          class="inline-block mt-5 px-5 py-3 rounded-xl bg-white text-neutral-900 font-semibold">
         Hire me now
